src/app/components/cell/game-cell.component.scss
.cell {
  flex: 1;
  aspect-ratio: 1 / 1;
  border: 1px solid var(--color-border);
  box-sizing: border-box;
  height: var(--cellsize, 30px);
  background-color: rgba(55, 65, 81, 0.8);
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;

  &.hunter {
    background-color: var(--color-text-secondary);
    animation: fadeFog 1s ease-out forwards;
  }

  &.visited {
    background-color: var(--exit-color, var(--color-text-secondary));
  }

  .gold {
    position: absolute;
    top: 5px;
    right: 5px;
  }
}

@keyframes fadeFog {
  from {
    background-color: rgba(55, 65, 81, 0.8);
  }
  to {
    background-color: var(--color-text-secondary);
  }
}

.rotation-0 {
  transform: rotate(0deg);
}
.rotation-90 {
  transform: rotate(90deg);
}
.rotation-180 {
  transform: scaleX(-1);
}
.rotation-270 {
  transform: rotate(270deg);
}

.lantern {
  z-index: 9;
  box-shadow: 0 0 12px 4px var(--color-yellow);
  border-radius: 50%;
}

.shieldx {
  box-shadow: 0 0 12px 4px var(--color-blue);
  border-radius: 50%;
}

